test-cases/negative/test_005_expect_without_is.lay
# negative test: expect without 'is' keyword
# expected: error should be thrown

expect the variable x the variable y


